@@ -3,6 +3,7 @@
 #include "CodecFactory.h"
 #include "../../utils/GUIInfoManager.h"
 #include "AudioContext.h"
+#include "../../filesystem/fileshoutcast.h"
 
 
 #define VOLUME_FFWD_MUTE 900 // 9dB
@@ -11,6 +12,8 @@
 
 #define TIME_TO_CACHE_NEXT_FILE 5000L         // 5 seconds
 #define TIME_TO_CROSS_FADE      10000L        // 10 seconds
+
+extern CFileShoutcast* m_pShoutCastRipper;
 
 // PAP: Psycho-acoustic Audio Player
 // Supporting all open  audio codec standards.
@@ -992,4 +995,28 @@ bool PAPlayer::SkipNext()
     return true;
   }
   return false;
+}
+
+bool PAPlayer::CanRecord()
+{
+  if (!m_pShoutCastRipper) return false;
+  return m_pShoutCastRipper->CanRecord();
+}
+
+bool PAPlayer::IsRecording()
+{
+  if (!m_pShoutCastRipper) return false;
+  return m_pShoutCastRipper->IsRecording();
+}
+
+bool PAPlayer::Record(bool bOnOff)
+{
+  if (!m_pShoutCastRipper) return false;
+  if (bOnOff && IsRecording()) return true;
+  if (bOnOff == false && IsRecording() == false) return true;
+  if (bOnOff)
+    return m_pShoutCastRipper->Record();
+
+  m_pShoutCastRipper->StopRecording();
+  return true;
 }
